# tec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  FOV.md  GDD.md  PROTOCOL.md  ROADMAP.md  SOURCE_LAYOUT.md  STYLE_DOCSTRINGS.md  TICKS_AND_TIME.md  WORKFLOW.md  WORKING_WITH_ASSISTANT.md  index.md
docs/ADR/: 0001-ecs-and-ticks.md  0002-fov-and-visibility.md
docs/DEVLOG/: 2025-09-01.md
docs/api/: tec.md
docs/assets/: docstring_stubs.md  interrogate.txt
src/tec/: settings.py
src/tec/client/: keymap.py  tcod_client.py
src/tec/server/: main.py  net.py  protocol.py  sim.py
src/tec/shared/: actions.py  components.py  fov.py  mapgen.py  types.py  world.py
src/tec/shared/systems/: movement.py  needs.py
tests/: test_fov_masking.py  test_movement.py  test_protocol_shapes.py  test_tick_move_costs.py
tools/: gen_docstring_stubs.py
